Opened 12 years ago

Closed 12 years ago

#3548 closed defect (fixed)

mp2 standalone decoder broken for some input files

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: mp2 regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

MP2 audio in the sample from ticket #3547 cannot be decoded if the mp3 decoder was disabled since c33351f3

$ ffmpeg -analyzeduration 2G -probesize 2G -i sat_uplink_signalloss.ts
ffmpeg version N-62334-g6290ba0 Copyright (c) 2000-2014 the FFmpeg developers
  built on Apr 10 2014 22:17:39 with gcc 4.7 (SUSE Linux)
  configuration: --disable-decoder='mp3,mp3float'
  libavutil      52. 75.100 / 52. 75.100
  libavcodec     55. 58.103 / 55. 58.103
  libavformat    55. 36.103 / 55. 36.103
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  4.100 /  4.  4.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 18.100 /  0. 18.100
[mpeg2video @ 0x2857100] Invalid frame dimensions 0x0.
    Last message repeated 8 times
[mpegts @ 0x2852220] PES packet size mismatch
[mpegts @ 0x2852220] DTS 4322551520 < 4322553629 out of order
[mpegts @ 0x2852220] PES packet size mismatch
[mpegts @ 0x2852220] Could not find codec parameters for stream 0 (Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, 2 channels, 127 kb/s): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Guessed Channel Layout for  Input Stream #0.0 : stereo
Input #0, mpegts, from 'sat_uplink_signalloss.ts':
  Duration: 00:00:27.46, start: 48025.799111, bitrate: 547 kb/s
  Program 1
    Stream #0:0[0x44]: Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, 127 kb/s
    Stream #0:1[0x45]: Video: mpeg2video (4:2:2) ([2][0][0][0] / 0x0002), yuv422p(tv), 720x576 [SAR 16:15 DAR 4:3], max. 3400 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
At least one output file must be specified

Works fine if the mp3 (or the mp3float) decoder are available.

Change History (2)

comment:1 by wim_arbor, 12 years ago

Same error with the sample from #3558:

arbor@debian7:~$ bin/ffmpeg -analyzeduration 2G -probesize 2G -i of_commercial_dvb_cut.ts
ffmpeg version N-62439-g5e379cd Copyright (c) 2000-2014 the FFmpeg developers
  built on Apr 14 2014 13:23:44 with gcc 4.7 (Debian 4.7.2-5)
  configuration: --disable-decoder='mp3,mp3float'
  libavutil      52. 76.100 / 52. 76.100
  libavcodec     55. 58.103 / 55. 58.103
  libavformat    55. 37.100 / 55. 37.100
  libavdevice    55. 13.100 / 55. 13.100
  libavfilter     4.  4.100 /  4.  4.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 18.100 /  0. 18.100
[mpegts @ 0x31b1220] PES packet size mismatch
    Last message repeated 3 times
[mpegts @ 0x31b1220] Could not find codec parameters for stream 2 (Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, 2 channels, 190 kb/s): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Guessed Channel Layout for  Input Stream #0.2 : stereo
Input #0, mpegts, from 'of_commercial_dvb_cut.ts':
  Duration: 00:00:05.96, start: 4576.668422, bitrate: 2523 kb/s
  Program 1
    Stream #0:0[0xa1]: Video: h264 (High) ([27][0][0][0] / 0x001B), yuv420p(tv, bt470bg), 720x576 [SAR 16:11 DAR 20:11], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x111](nla): Subtitle: dvb_teletext ([6][0][0][0] / 0x0006)
    Stream #0:2[0x489](nla): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, 190 kb/s
At least one output file must be specified
Last edited 12 years ago by wim_arbor (previous) (diff)

comment:2 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.